# bt-ddos-shield

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_shield.sh  setup-dev.sh  setup-locally.sh  setup.py
.github/workflows/: publish.yml
bt_ddos_shield/: __init__.py  address.py  address_manager.py  blockchain_manager.py  certificate_manager.py  client.py  dns_manager.py  domain.py  encryption.py  encryption_manager.py  event_manager.py  event_processor.py  manifest_manager.py  message.py  miner_shield.py  shield_metagraph.py  state_manager.py  utils.py  validator.py  validators_manager.py
bt_ddos_shield/turbobt/: __init__.py  blockchain_manager.py  client.py
docker/: .env.template  Dockerfile  build_image.sh  entrypoint.sh  run_image.sh
envs/: .env.template  .env.test.template
tests/: conftest.py  test_address.py  test_address_manager.py  test_blockchain_manager.py  test_certificate_manager.py  test_credentials.py  test_encryption.py  test_encryption_manager.py  test_manifest_manager.py  test_miner_shield.py  test_shield_metagraph.py  test_state_manager.py  test_validator.py  test_validators_manager.py
tests/test_turbobt/: test_client.py
tests/turbobt/: test_blockchain_manager.py
