[project]
name = "bt-ddos-shield"
version = "0.1"
requires-python = "~=3.12.3"

dependencies = [
    "boto3~=1.35.27",
    "eciespy~=0.4.2",
    "sqlalchemy~=2.0.36",
    "psycopg2-binary~=2.9.7",
    "route53~=1.0.1",
    "python-dotenv",
    "pydantic>=2.10.5",
]

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[dependency-groups]
test = [
    "pytest",
]
format = [
    "ruff",
]
lint = [
    "ruff",
    "codespell[toml]",
]
type_check = [
    "mypy",
    "types-python-dateutil",
    "types-requests",
]
security_check = [
    "bandit>=1.7.7",
]
